@@ -10,6 +10,7 @@ Bug fixes:
    cases.
  * apport-gtk: Fix crash when closing the crash dialog while the information is
    being collected.
+ * hookutils.py, xsession_errors(): Fix crash when running under a non-UTF8 locale.
 
 2.2.1 (2012-06-11)
 ------------------
